Can login, as guest. Styled AuthenticationPage.vue and BrowsePage.vue, getting data from Directus and showing card.

--- a/src/theme/variables.css
+++ b/src/theme/variables.css
@@ -1,8 +1,27 @@
 /* Ionic Variables and Theming. For more info, please see:
 http://ionicframework.com/docs/theming/ */
 
+@font-face {
+  font-family: 'Saira';
+  src: url('../../public/assets/fonts/SairaStencilOne-Regular.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'VT323';
+  src: url('../../public/assets/fonts/VT323-Regular.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'Fira Code';
+  src: url('../../public/assets/fonts/FiraCode-VariableFont_wght.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
 /** Ionic CSS Variables **/
 :root {
+  --ion-font-family: Fira Code, monospace;
   /** primary **/
   --ion-color-primary: #3880ff;
   --ion-color-primary-rgb: 56, 128, 255;
