--- a/src/theme/variables.css
+++ b/src/theme/variables.css
@@ -101,7 +101,7 @@ http://ionicframework.com/docs/theming/ */
 
 }
 
-@media (prefers-color-scheme: dark) {
+@media (prefers-color-scheme: light) {
   /*
    * Dark Colors
    * -------------------------------------------
