Test theme mode on emulator

--- a/src/theme/variables.css
+++ b/src/theme/variables.css
@@ -101,11 +101,12 @@ http://ionicframework.com/docs/theming/ */
 
 }
 
-@media (prefers-color-scheme: light) {
-  /*
+/*
+@media (prefers-color-scheme: no-preference) {
+  !*
    * Dark Colors
    * -------------------------------------------
-   */
+   *!
 
   body {
     --ion-color-primary: #428cff;
@@ -172,10 +173,10 @@ http://ionicframework.com/docs/theming/ */
     --ion-color-light-tint: #383a3e;
   }
 
-  /*
+  !*
    * iOS Dark Theme
    * -------------------------------------------
-   */
+   *!
 
   .ios body {
     --ion-background-color: #000000;
@@ -216,10 +217,10 @@ http://ionicframework.com/docs/theming/ */
   }
 
 
-  /*
+  !*
    * Material Design Dark Theme
    * -------------------------------------------
-   */
+   *!
 
   .md body {
     --ion-background-color: #121212;
@@ -258,4 +259,4 @@ http://ionicframework.com/docs/theming/ */
 
     --ion-card-background: #1e1e1e;
   }
-}
+}*/
